name:                 hangman
version:              0.1.0.0
synopsis:             Playing Hangman
description:          Please see README.md
homepage:             Chris N Julie
license:              BSD3
license-file:         LICENSE
author:               Chris Allen and Julie Mononuki
maintainer:           haskellbook.com
category:             Game
build-type:           Simple
extra-source-files:   data/dict.txt
cabal-version:        >=1.10
extra-source-files:   README.md

executable hangman
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5
                    , random
                    , split
